cmake_minimum_required(VERSION 3.8)
project(generate_orbbec_launch)

if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
  add_compile_options(-Wall -Wextra -Wpedantic)
endif()

find_package(ament_cmake REQUIRED)
find_package(rosidl_default_generators REQUIRED)
find_package(std_msgs REQUIRED)
find_package(diagnostic_msgs REQUIRED)

# --- Messages ---
rosidl_generate_interfaces(${PROJECT_NAME}
  "msg/OrbbecUsbDevice.msg"
  "msg/OrbbecUsbDeviceArray.msg"
  "msg/KernelLogEntry.msg"
  "msg/WifiWanStatus.msg"
  "msg/PingLatency.msg"
  "msg/LinkOutage.msg"
  "msg/NetThroughput.msg"
  DEPENDENCIES std_msgs
)

# --- Client libraries (uncomment as C++ nodes are added) ---
# find_package(rclcpp REQUIRED)
# add_executable(my_cpp_node src/my_cpp_node.cpp)
# ament_target_dependencies(my_cpp_node rclcpp)
# install(TARGETS my_cpp_node DESTINATION lib/${PROJECT_NAME})

# --- Python nodes ---
install(PROGRAMS nodes/usb_camera_monitor.py
  DESTINATION lib/${PROJECT_NAME}
  RENAME usb_camera_monitor
)
install(PROGRAMS nodes/kernel_log_monitor.py
  DESTINATION lib/${PROJECT_NAME}
  RENAME kernel_log_monitor
)
install(PROGRAMS nodes/wifi_wan_monitor.py
  DESTINATION lib/${PROJECT_NAME}
  RENAME wifi_wan_monitor
)
install(PROGRAMS nodes/link_latency_monitor.py
  DESTINATION lib/${PROJECT_NAME}
  RENAME link_latency_monitor
)
install(PROGRAMS nodes/net_throughput_monitor.py
  DESTINATION lib/${PROJECT_NAME}
  RENAME net_throughput_monitor
)
install(PROGRAMS nodes/router_throughput_monitor.py
  DESTINATION lib/${PROJECT_NAME}
  RENAME router_throughput_monitor
)

# --- Launch files (hand-authored + generated by scripts/generate_orbbec_launch.sh) ---
install(DIRECTORY launch/
  DESTINATION share/${PROJECT_NAME}/launch
  FILES_MATCHING PATTERN "*.launch.py"
)

# --- Parameter config files ---
install(DIRECTORY config/
  DESTINATION share/${PROJECT_NAME}/config
)

# --- Standalone helper script (kept as a plain script, not a ROS node) ---
install(PROGRAMS scripts/generate_orbbec_launch.sh
  DESTINATION lib/${PROJECT_NAME}
)

ament_export_dependencies(rosidl_default_runtime)

if(BUILD_TESTING)
  find_package(ament_lint_auto REQUIRED)
  ament_lint_auto_find_test_dependencies()
endif()

ament_package()
