<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>generate_orbbec_launch</name>
  <version>0.1.0</version>
  <description>
    Tooling and launch files for running multiple Orbbec Gemini cameras,
    either hardware-synchronized (primary/secondary) or independently
    (standalone / free_run). Includes an interactive launch-file generator.
  </description>
  <maintainer email="jeongmin.choi@wattrobotics.ai">wntdev99</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <!-- Uncomment the relevant client library when adding nodes -->
  <!-- <depend>rclcpp</depend> -->
  <!-- <depend>rclpy</depend> -->

  <exec_depend>orbbec_camera</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
